Fixed issue with project modal transparency on ios

--- a/jenny-resume-site/src/app/pages/projects/projects.component.scss
+++ b/jenny-resume-site/src/app/pages/projects/projects.component.scss
@@ -176,6 +176,10 @@
     transition: all 0.2s ease-in-out;
 }
 
+#projectContent {
+    opacity: 1;
+}
+
 .modal-image-wrapper {
     width: 100%;
     height: 400px;
